Increase Z-index to solve footer for MS Edge

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -267,6 +267,7 @@ footer {
   padding: 15px;
   width: 100%;
   margin-top: 20px;
+  z-index: 10;
 }
 
 #social-networks {
